--- a/.github/workflows/github-actions-cd.yml
+++ b/.github/workflows/github-actions-cd.yml
@@ -16,7 +16,7 @@ jobs:
         with:
           name: project.zip
           path: |
-            '**.py'
+            createdProducts.py
             README.md
             produtos.csv
             config.example.json
