--- a/.github/workflows/github-actions-cd.yml
+++ b/.github/workflows/github-actions-cd.yml
@@ -20,3 +20,13 @@ jobs:
             README.md
             produtos.csv
             config.example.json
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: deliver
+    steps:
+      - uses: actions/download-artifact@v4
+        with:
+          name: project.zip
+      - name: Display structure of downloaded files
+        run: ls -R
