--- a/.github/workflows/workflow_pr_test.yml
+++ b/.github/workflows/workflow_pr_test.yml
@@ -1,10 +1,7 @@
-name: CI/CD - Criação de PR
+name: Teste Criação de PR CI/CD
 
 on:
-  push:
-    paths:
-      - '.github/workflows/github-actions.yml'
-      - '.github/workflows/github-actions-cd.yml'
+  workflow_dispatch:
 
 jobs:
   cria-pr:
@@ -19,20 +16,21 @@ jobs:
           git config user.name "github-actions"
           git config user.email "github-actions@users.noreply.github.com"
 
-      - name: Cria nova branch e faz push
+      - name: Cria nova branch e push
         run: |
           git checkout -b ci_cd_formativa_w3
-          git add .github/workflows/github-actions.yml .github/workflows/github-actions-cd.yml
-          git commit -m "Atualiza arquivos CI/CD"
+          echo "# Teste de workflow" >> teste.md
+          git add teste.md
+          git commit -m "feat: adiciona arquivo de teste para CI/CD"
           git push https://x-access-token:${{ secrets.GH_PAT }}@github.com/${{ github.repository }} ci_cd_formativa_w3
 
       - name: Instala GitHub CLI
         uses: cli/cli-action@v2
 
-      - name: Cria PR
+      - name: Cria Pull Request
         run: |
-          gh pr create --title "CI/CD Update" \
-                       --body "PR automático para CI/CD" \
+          gh pr create --title "Teste de PR CI/CD" \
+                       --body "PR criado automaticamente para testar fluxo" \
                        --base main \
                        --head ci_cd_formativa_w3
         env:
