--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,11 @@
-name: Main - Testing
+name: Continuous Integration - Testing
 on:
+  pull_request:
+    branches:
+      - main
   push:
     branches:
-      - main # ou qualquer branch
+      - ci_cd_formativa_w3
 
 jobs:
   build:
@@ -11,12 +14,14 @@ jobs:
       - name: Check out repository code
         uses: actions/checkout@v4
 
-      - name: Simulation CD
-        uses: actions/upload-artifact@v4
+      - name: Python Lint Code Scanning Action
+        uses: advanced-security/python-lint-code-scanning-action@v1.1.2
         with:
-          name: project.zip
-          path: |
-            createdProducts.py
-            README.md
-            produtos.csv
-            config.example.json
+          linter: pylint
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Simulando deploy após CI
+        run: echo "Deploy feito com sucesso após build"
