criando novas funções para cadastrar preço e estoque, além de melhorias como a implementação de log de execução

--- a/config.example.json
+++ b/config.example.json
@@ -1,5 +1,7 @@
 {
   "client_id": "SUA_CLIENT_ID_AQUI",
   "access_token": "SEU_ACCESS_TOKEN_AQUI",
-  "base_url": "https://sandboxapi-marketplace.netshoes.com.br"
+  "base_url": "https://sandboxapi-marketplace.netshoes.com.br",
+  "delay_seconds": 15,
+  "produtos_csv_path": "../produtos.csv"
 }
