--- a/.github/workflows/contiuousintegration.yml
+++ b/.github/workflows/contiuousintegration.yml
@@ -1,4 +1,5 @@
 name: Continuous Integration
+
 on:
   pull_request:
     branches:
@@ -18,6 +19,7 @@ jobs:
 
   testes:
     runs-on: ubuntu-latest
+    needs: build  # ⬅️ Só roda testes depois do build passar
     steps:
       - name: Checkout do Código
         uses: actions/checkout@v4
@@ -25,12 +27,12 @@ jobs:
       - name: Configurar Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.11'
+          python-version: '3.12'
 
       - name: Instalar dependências
         run: |
           python -m pip install --upgrade pip
-          pip install pytest requests
+          pip install -r requirements.txt
 
       - name: Executar testes
         run: |
