adicionando a pasta /src no

--- a/.github/workflows/contiuousintegration.yml
+++ b/.github/workflows/contiuousintegration.yml
@@ -34,6 +34,9 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
+      - name: Definir PYTHONPATH
+        run: echo "PYTHONPATH=$PYTHONPATH:$(pwd)/src" >> $GITHUB_ENV
+
       - name: Executar testes
         run: |
           pytest tests/
